# Cinux-GUI

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/commands/: audit.md  done.md  milestone.md  next.md  resume.md  roadmap.md  status.md
core/: abi_check.cpp  cgui_abi_check.cpp  cgui_conf.h  cgui_event.h  cgui_event_payload.h  cgui_host.h  cgui_pump.cpp  cgui_pump.hpp  cgui_region.cpp  cgui_region.hpp  cgui_swraseter.cpp  cgui_swraseter.hpp  colors.hpp  compositor.cpp  compositor.hpp  event.hpp  event_payload.hpp  font.cpp  font.hpp  font_psf_data.hpp  gui_core.cpp  gui_core.hpp  host.hpp  icon_data.hpp  paint_list.cpp  paint_list.hpp  pump.cpp  pump.hpp  region.cpp  region.hpp  scene.cpp  scene.hpp  swraster.cpp  swraster.hpp  theme.cpp  theme.hpp  widget.cpp  widget.hpp
core/widget/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  container.cpp  container.hpp  desktop_icon.cpp  desktop_icon.hpp  dropdown.cpp  dropdown.hpp  label.cpp  label.hpp  radio.cpp  radio.hpp  slider.cpp  slider.hpp  terminal.cpp  terminal.hpp  textbox.cpp  textbox.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
docs/: ROADMAP.md
document/ai/: CODING-TASTE.md  DIRECTIVES.md  PLAN.md  QUALITY-GATES.md  ROADMAP.md  prompts.md
document/notes/: .gitkeep  2026-06-30-p0-a-staging-ownership.md  2026-06-30-p0-b1-psf-font.md  2026-06-30-p0-b2-offscreen-host.md  2026-06-30-p0-b3-replay-host.md  2026-06-30-p1-probe1-fbdev-host.md  2026-07-01-demo-sdl-hosts.md  2026-07-01-p2-a-scene-model.md  2026-07-01-p2-b-compositor.md  2026-07-01-p2-c-dirty-diff.md  2026-07-01-p2-d-hosts-on-compositor.md  2026-07-01-p3-a-widget-framework.md  2026-07-01-p3-b-rounded-theme.md  2026-07-01-p3-c-basic-widgets.md  2026-07-01-p3-d-slider-widgets-host.md  2026-07-01-p4-a-window-widget.md  2026-07-01-p4-b-window-manager.md  2026-07-01-p4-c-terminal-widget.md  2026-07-01-p4-d-terminal-pty.md  2026-07-01-p4-e-fbdev-widget-tree.md  2026-07-01-p5-a-font-scaling.md  2026-07-01-p5-b-theme-variants.md  2026-07-01-p5-c-per-widget-dirty.md  2026-07-01-p5-d-flex-percorner.md  2026-07-01-p5-e-terminal-ansi-colour.md  2026-07-01-p5-f-local-dirty.md  2026-07-01-p6-a-textbox-checkbox.md  2026-07-01-p6-b-window-resize.md  2026-07-01-p6-c-terminal-bg256.md  2026-07-01-p6-d-scene-retire-compositor-ocp.md  2026-07-01-p7-a-radio-dropdown.md  2026-07-01-p7-c-compositor-cursor.md
host/: demo_host_main.cpp  evdev_device.cpp  evdev_device.hpp  fake_host_main.cpp  fbdev_device.cpp  fbdev_device.hpp  gallery_dump_main.cpp  gallery_host_main.cpp  linux_fbdev_main.cpp  offscreen_host_main.cpp  posix_spawn.cpp  posix_spawn.hpp  ppm_writer.cpp  ppm_writer.hpp  replay_host_main.cpp  sdl_host_main.cpp  terminal_host_main.cpp  widgets_host_main.cpp
scripts/: build_busybox_x86_64.sh  build_fbdev_host_static.sh  build_initramfs.sh  build_kernel_x86_64.sh  gen_font_data.py  guest_smoke_p1.sh  smoke_p1.sh  smoke_p1_drive.py
test/: test_checkbox.cpp  test_compositor.cpp  test_cursor.cpp  test_dirty.cpp  test_dropdown.cpp  test_evdev.cpp  test_flex.cpp  test_font_scale.cpp  test_posix_spawn.cpp  test_radio.cpp  test_resize.cpp  test_scene.cpp  test_slider.cpp  test_terminal.cpp  test_terminal_ansi.cpp  test_terminal_bg256.cpp  test_textbox.cpp  test_theme.cpp  test_widget.cpp  test_widgets.cpp  test_window.cpp  test_window_manager.cpp
